Graph complete, testability improved,added the test kit

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':knitannotations', ':knitprocessor', ':knitlib'
+include ':app', ':knitannotations', ':knitprocessor', ':knitlib', ':knittestkit'
