worked on the test kit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     implementation project(path: ':knitlib')
+    testImplementation project(path: ':knittestkit')
+
     annotationProcessor project(path: ':knitprocessor')
 }
