--- a/knittestkit/build.gradle
+++ b/knittestkit/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
-
+    api 'junit:junit:4.12'
     api project(path: ':knitlib')
 
     testImplementation 'junit:junit:4.12'
