--- a/knitlib/src/main/AndroidManifest.xml
+++ b/knitlib/src/main/AndroidManifest.xml
@@ -1,2 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.omerozer.knit"/>
+          package="com.omerozer.knit">
+
+
+    <application>
+
+
+
+
+    </application>
+
+</manifest>
