--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ android:
     - android-26
 
   license:
+    - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
 script:
    - ./gradlew build connectedCheck
