--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: android
 android:
   components:
     - tools
-    - build-tools-25.0.2
+    - build-tools-25.0.1
+    - build-tools-26.0.0
     - platform-tools
+    - android-25
     - android-26
 
   license:
