--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: android
+sudo: false
 android:
   components:
     - tools
-    - build-tools-25.0.1
-    - build-tools-26.0.0
     - platform-tools
-    - android-25
     - android-26
 
-  license:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
+   branches:
+    only:
+    - master
 
 script:
    - ./gradlew build connectedCheck
