assemble task added

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ license:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 
+install: ./gradlew clean assemble
+
 script:
    - ./gradlew build connectedCheck
 
