turned off lint abort

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
     }
+
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 task clean(type: Delete) {
