--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,12 @@
 language: android
-
-env:
-  global:
-    - ANDROID_TARGET=android-26
-    - ANDROID_ABI=armeabi-v7a
-
 android:
   components:
       - tools
       - android-26
       - platform-tools
       - build-tools-26.0.2
-      - sys-img-${ANDROID_ABI}-${ANDROID_TARGET}
-script:
-      - ./gradlew build jacocoTestReport assembleAndroidTest
-      - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-      - emulator -avd test -no-skin -no-audio -no-window &
-      - android-wait-for-emulator
-      - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-      - ./gradlew connectedCheck
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+script:
+      - ./gradlew check
 
 
